# dynacase-webdesk

./: 71_webdesk.conf.in  ChangeLog  DYNACASE-WEBDESK_fr.po  Makefile.in  PubRule  README.md  RELEASE  WEBDESK.app  WEBDESK.spec.in  WEBDESK_en.po  WEBDESK_fr.po  WEBDESK_init.php.in  WEBDESK_migr_1.3.1  WEBDESK_post  configure.in  freedom-webdesk.spec.in  info.xml.in  phpweather-default.php  phpweather-init.php  squirrelmail-freedom_theme.php.in
Action/: Lib.Services.php  addservice.php  admins.php  appprefs.php  countaffectdoc.php  delservice.php  geoservice.php  getjsservice.php  gsvc.php  main.php  portal.php  preferences.php  previewtheme.php  savesvc.php  theme.php
Api/: Makefile  svcmng.php
Css/: webdesk-system.css  webdesk-theme.css  webdesk.css
Doc/: Makefile  portal.odt
Freedom/: Makefile  Method.PortalService.php  Method.UserPortal.php  webdesk-init.csv  webdesk-init.gnumeric  webdesk-init.ods  webdesk.csv  webdesk.gnumeric  webdesk.ods
Images/: Makefile
Javascript/: main.js  portal.js  prefadmin.js
Services/: efreedom_search.xml  egurl.php  egurl.xml  embed.php  embed.xml  esvcardoise.xml  esvcmail.xml  esvcrss.php  esvcrss.xml  esvctest.xml  freedom_fsearch.php  freedom_fsearch.xml  freedom_search.php  freedom_search.xml  freedomrss.css  freedomrss.js  freedomrss.php  freedomrss.xml  freedomrss_edit.php  freedomrss_edit.xml  freedomrss_search.php  gurl.php  gurl.xml  incident.php  incident.xml  info.xml.in  meteo.php  meteo.xml  meteo_edit.php  meteo_edit.xml  meteoiconmap.php  svcardoise.js  svcardoise.php  svcardoise.xml  svccontact.css  svccontact.js  svccontact.php  svccontact.xml  svccontact_edit.php  svccontact_search.php  (+9 more)
ServicesInit/: Makefile  webdesk.ods  welcome.xml
Xml/: Makefile  admin.xml  admins.xml  appprefs.xml  gsvc.xml  main.xml  portal.xml  preferences.xml  previewtheme.xml  svctest.xml  theme.xml
Zone/: Makefile  anakeen.xml  css.xml  head.xml  userident.xml
buildTools/: PubRule  csvfam2po.php
debian/: Makefile  changelog.in  control  copyright  dirs  postinst  rules
dynacase-webdesk-services/: .project  Makefile  WEBDESK-SERVICES_en.po  WEBDESK-SERVICES_fr.po  fam2po.php  info.xml.in
dynacase-webdesk-services/Families/: Makefile
dynacase-webdesk-services/Families/Views/: Makefile
dynacase-webdesk-services/devTools/: build-package.sh  deploy-package.config  generateInfoXml.py  generateWorkflow.py  inosync_conf.py  targets.xml
dynacase-webdesk-services/devTools/templates/: WFL_workflow.csv.template
dynacase-webdesk-services/devTools/templates/APP/: APP.app.template  Makefile
dynacase-webdesk-ui/: Makefile  WEBDESK_en.po  WEBDESK_fr.po  WEBDESK_migr_1.3.1  info.xml.in
dynacase-webdesk-ui/Actions/: Makefile
dynacase-webdesk-ui/Actions/WEBDESK/: Lib.Services.php  Util.php  addservice.php  countaffectdoc.php  delservice.php  egurl.php  egurl.xml  embed.php  embed.xml  esvcrss.php  freedom_fsearch.php  freedom_search.php  freedomrss.php  freedomrss_edit.php  freedomrss_search.php  freedomrss_search.xml  geoservice.php  getjsservice.php  gsvc.php  gsvc.xml  gurl.php  incident.php  incident.xml  meteoiconmap.php  portal.js  portal.php  portal.xml  savesvc.php  svcardoise.js  svcardoise.php  svccontact.css  svccontact.php  svccontact_edit.php  svccontact_edit.xml  svccontact_search.php  svcmail.php  svcrss.php  svctest.php  svctest.xml  webdesk-system.css  (+1 more)
dynacase-webdesk-ui/Apps/WEBDESK/: WEBDESK.app  WEBDESK_init.php.in
dynacase-webdesk-ui/Families/: Class.Portal_Service.php  Class.User_Portal.php  Makefile  Method.PortalService.php  PortalService.csv  UserPortal.csv  stubWebdeskUiFamilies.php  webdesk-init.csv
dynacase-webdesk-ui/Images/: Makefile
dynacase-webdesk-ui/Scripts/: Makefile  svcmng.php
dynacase-webdesk-ui/devTools/: .gitignore  addApplication.py  deploy-package.config  deploy-package.sh  extractAttrProductConst.py  generateFamily.py  rsyncExclude.txt  utils.py
dynacase-webdesk-ui/devTools/templates/: Class.workflow.php.template  Method.family.php.template  PARAM_family.csv.template  STRUCT_family.csv.template
dynacase-webdesk-ui/devTools/templates/APP/: APP_init.php.in.template
dynacase-webdesk-ui/locale/en/: Makefile  WEBDESK_en.po
dynacase-webdesk-ui/locale/fr/: WEBDESK_fr.po
