#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.8 2009/01/06 15:15:14 jerome Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=dynacase-webdesk
AC_SUBST(APPNAME)
APPNAME=WEBDESK

LICENSE="http://www.fsf.org/licensing/licenses/agpl-3.0.html GNU Affero General Public License"
AC_SUBST(LICENSE)

ac_default_prefix=/usr/share/what
AC_SUBST(PUBRULE)
PUBRULE=
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
if test "x$PUBRULE" != "x"; then
  PUBRULEDIR=$PUBRULE
else
  if test "x$PUBRULEDIR" == "x"; then
     AC_CHECK_FILE($HOME/anakeen/devtools/PubRule, PUBRULEDIR=$HOME/anakeen/devtools/)
     if test "x$PUBRULEDIR" = "x"; then
          PUBRULEDIR=`pwd`
     fi
  fi
fi
AC_CHECK_FILE($PUBRULEDIR/PubRule, PUBRULE=$PUBRULEDIR)
if test "x$PUBRULE" = "x"; then
  AC_MSG_ERROR([Could not find PubRule])
fi
AC_MSG_NOTICE([PubRule located at $PUBRULE])


AC_SUBST(DEBUG)
DEBUG=N
AC_ARG_ENABLE(debug,
[  --enable-debug   Set Debug ], DEBUG=Y)

AC_SUBST(DBHOST)
DBHOST=localhost
AC_ARG_WITH(dbhost,
[  --with-dbhost=host the PostgreSql Host (default localhost)  ], DBHOST=$withval)

AC_SUBST(DBNAME)
DBNAME=freedom
AC_ARG_WITH(dbname,
[  --with-dbname=name  the database name (default anakeen)], DBNAME=$withval)

AC_SUBST(DBUSER)
DBUSER=anakeen
AC_ARG_WITH(dbuser,
[  --with-dbuser=username  the database user (default anakeen)], DBUSER=$withval)

AC_SUBST(DBPORT)
DBPORT=5432
AC_ARG_WITH(dbport,
[  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)


AC_OUTPUT(71_webdesk.conf Makefile WEBDESK_init.php info.xml Services/info.xml)
