#   Autoconf script
#
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.1 2010-01-13 10:47:16 eric Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=dynacase-webdesk
AC_SUBST(APPNAME)
APPNAME=DYNACASE-WEBDESK
ac_default_prefix=/var/www/dynacase/dynacase
AC_SUBST(PUBRULE)
PUBRULE=
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
if test -z ${PUBRULEDIR}; then
    PUBRULE=`pwd`
fi
if test -n -f $PUBRULEDIR/PubRule; then
    AC_MSG_ERROR([Could not find PubRule])
fi
AC_MSG_NOTICE([PubRule located at $PUBRULE])

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(info.xml)
AC_CONFIG_FILES(dynacase-webdesk-services/info.xml)
AC_CONFIG_FILES(dynacase-webdesk-ui/info.xml)

for file in Apps/*/*_init.php.in; do
    AC_CONFIG_FILES(${file%.in})
done

AC_OUTPUT
